added ref Pan2019b

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1367,6 +1367,17 @@
   timestamp = {2019.04.07},
 }
 
+@Article{Avril2014,
+  author    = {Avril, M. and Leclère, C. and Viaux, S. and Michelet, S. and Achard, C. and Missonnier, S. and Keren, M. and Cohen, D. and Chetouani, M.},
+  title     = {Social signal processing for studying parent-infant interaction},
+  journal   = {Frontiers in Psychology},
+  year      = {2014},
+  volume    = {5},
+  doi       = {10.3389/fpsyg.2014.01437},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+}
+
 @Book{Axtell1996,
   title     = {Growing Artificial Societies},
   publisher = {The Brookings Institution},
@@ -2368,6 +2379,19 @@
   doi       = {10.2307/3773626},
   owner     = {Vincent},
   timestamp = {2019.03.26},
+}
+
+@Article{Bernstein2017,
+  author    = {Bernstein, G. A. and Hadjiyanni, T. and Cullen, K. R. and Robinson, J. W. and Harris, E. C. and Young, A. D. and Fasching, J. and Walczak, N. and Lee, S. and Morellas, V. and Papanikolopoulos, N.},
+  title     = {Use of Computer Vision Tools to Identify Behavioral Markers of Pediatric Obsessive{\textendash}Compulsive Disorder: A Pilot Study},
+  journal   = {Journal of Child and Adolescent Psychopharmacology},
+  year      = {2017},
+  volume    = {27},
+  number    = {2},
+  pages     = {140-147},
+  doi       = {10.1089/cap.2016.0067},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
 }
 
 @Book{BerresfordEllis1998,
@@ -5022,6 +5046,19 @@
   doi       = {10.1145/1281192.1281212},
   owner     = {Vincent},
   timestamp = {2012.07.30},
+}
+
+@Article{Chikhaoui2017,
+  author    = {Chikhaoui, B. and Chiazzaro, M. and Wang, S. and Sotir, M.},
+  title     = {Detecting Communities of Authority and Analyzing Their Influence in Dynamic Social Networks},
+  journal   = {ACM Transactions on Intelligent Systems and Technology},
+  year      = {2017},
+  volume    = {8},
+  number    = {6},
+  pages     = {82},
+  doi       = {10.1145/3070658},
+  owner     = {Vincent},
+  timestamp = {2017.08.22},
 }
 
 @TechReport{Chinchor1999,
@@ -8632,6 +8669,20 @@
   timestamp = {2010.06.03},
 }
 
+@InCollection{Forczmanski2016,
+  author    = {Forczmański, P. and Nowosielski, A.},
+  title     = {Multi-view Data Aggregation for Behaviour Analysis in Video Surveillance Systems},
+  booktitle = {International Conference on Computer Vision and Graphics},
+  publisher = {Springer},
+  year      = {2016},
+  volume    = {9972},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {462-473},
+  doi       = {10.1007/978-3-319-46418-3_41},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+}
+
 @Book{Forster1927,
   title     = {Aspects of the Novel},
   publisher = {Edward Arnold},
@@ -10042,6 +10093,17 @@
   owner     = {Vincent},
   timestamp = {2019.04.13},
   url       = {https://muse.jhu.edu/article/585743},
+}
+
+@InProceedings{Grover2016,
+  author    = {Grover, A. and Leskovec, J.},
+  title     = {node2vec: Scalable Feature Learning for Networks},
+  booktitle = {22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year      = {2016},
+  pages     = {855-864},
+  doi       = {10.1145/2939672.2939754},
+  owner     = {Vincent},
+  timestamp = {2019.06.29},
 }
 
 @InProceedings{Gruzd2008,
@@ -11839,6 +11901,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.02.15},
 }
 
+@Article{Jack2012,
+  author    = {Jack, R. E. and Garrod, O. G. B. and Yu, H. and Caldara, R. and Schyns, P. G.},
+  title     = {Facial expressions of emotion are not culturally universal},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2012},
+  volume    = {109},
+  number    = {19},
+  pages     = {7241-7244},
+  doi       = {10.1073/pnas.1200155109},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+}
+
 @Book{Jackson1964,
   title     = {The oldest Irish Tradition: A Window on the Iron Age},
   publisher = {Cambridge University Press},
@@ -12115,6 +12190,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cvpr.2007.383180},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+}
+
+@InCollection{Jiang2012,
+  author    = {Jiang, Y.-G. and Dai, Q. and Xue, X. and Liu, W. and Ngo, C.-W.},
+  title     = {Trajectory-Based Modeling of Human Actions with Motion Reference Points},
+  booktitle = {Computer Vision},
+  publisher = {Springer},
+  year      = {2012},
+  pages     = {425-438},
+  doi       = {10.1007/978-3-642-33715-4_31},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
 }
 
 @InProceedings{Jiang2017,
@@ -12475,6 +12562,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://global.oup.com/academic/product/understanding-social-networks-9780195379471?cc=fr&lang=en&},
 }
 
+@Article{Kagan2019,
+  author    = {Kagan, D. and Chesney, T. and Fire, M.},
+  title     = {Using Data Science to Understand the Film Industry's Gender Gap},
+  journal   = {arXiv},
+  year      = {2019},
+  volume    = {cs.SI},
+  pages     = {1903.06469},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+  url       = {https://arxiv.org/abs/1903.06469},
+}
+
 @InProceedings{Kairam2012,
   author    = {Kairam, S. R. and Wang, D. J. and Leskovec, J.},
   title     = {The life and death of online groups},
@@ -12731,6 +12830,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@InProceedings{Khorrami2016,
+  author    = {Khorrami, P. and Le Paine, T. and Brady, K. and Dagli, C. and Huang, T. S.},
+  title     = {How deep neural networks can improve emotion recognition on video data},
+  booktitle = {IEEE International Conference on Image Processing},
+  year      = {2016},
+  doi       = {10.1109/icip.2016.7532431},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+}
+
 @InProceedings{Khungurn2016,
   author    = {Khungurn, P. and Chou, D.},
   title     = {Pose estimation of anime/manga characters: a case for synthetic data},
@@ -12848,6 +12957,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1111/j.1467-8624.2006.00971.x},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@InProceedings{Kim2008,
+  author    = {Kim, M. and Kumar, S. and Pavlovic, V. and Rowley, H.},
+  title     = {Face tracking and recognition with visual constraints in real-world videos},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition},
+  year      = {2008},
+  doi       = {10.1109/cvpr.2008.4587572},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
 }
 
 @InProceedings{Kim2010,
@@ -15530,6 +15649,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2014.10.22},
 }
 
+@Article{Lu2014d,
+  author    = {Lu, Z. and Sun, X. and Wen, Y. and Cao, G. and La Porta, T.},
+  title     = {Algorithms and Applications for Community Detection in Weighted Networks},
+  journal   = {IEEE Transactions on Parallel and Distributed Systems},
+  year      = {2015},
+  volume    = {26},
+  number    = {11},
+  pages     = {2916-2926},
+  doi       = {10.1109/TPDS.2014.2370031},
+  owner     = {Vincent},
+  timestamp = {2014.11.15},
+}
+
 @InProceedings{Lucas1981,
   author    = {Lucas, B. D. and Kanade, T.},
   title     = {An iterative image registration technique with an application to stereo vision},
@@ -15802,6 +15934,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/11573548_80},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@Article{Ma2017,
+  author    = {Ma, X. and Dong, D.},
+  title     = {Evolutionary nonnegative matrix factorization algorithms for community detection in dynamic networks},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2017},
+  volume    = {29},
+  number    = {5},
+  pages     = {1045-1058},
+  doi       = {10.1109/TKDE.2017.2657752},
+  owner     = {Vincent},
+  timestamp = {2017.01.31},
+}
+
+@InProceedings{Maaten2009,
+  author    = {van der Maaten, L.},
+  title     = {Learning a parametric embedding by preserving local structure},
+  booktitle = {12th International Conference on Artificial Intelligence and Statistics},
+  year      = {2009},
+  volume    = {5},
+  series    = {Proceedings of Machine Learning Research},
+  pages     = {384-391},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+  url       = {http://proceedings.mlr.press/v5/maaten09a.html},
 }
 
 @Article{MacCarron2012,
@@ -19485,6 +19643,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.jcomputers.us/vol8/jcp0809-38.pdf},
 }
 
+@InProceedings{Park2013b,
+  author    = {Park, H. S. and Jain, E. and Sheikh, Y.},
+  title     = {Predicting Primary Gaze Behavior Using Social Saliency Fields},
+  booktitle = {IEEE International Conference on Computer Vision},
+  year      = {2013},
+  doi       = {10.1109/iccv.2013.435},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+}
+
 @Article{Park2014,
   author    = {Park, S.-B. and Lee, J.-D. and You, E. and Lee, D.},
   title     = {Movie browsing system based on character and emotion},
@@ -20533,6 +20701,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://eric.ed.gov/?id=EJ1050665},
 }
 
+@Article{Raghavan2007,
+  author    = {Raghavan, U. N. and Albert, R. and Kumara, S.},
+  title     = {Near linear time algorithm to detect community structures in large-scale networks},
+  journal   = {Physical Review E},
+  year      = {2007},
+  volume    = {76},
+  number    = {3},
+  pages     = {036106},
+  doi       = {10.1103/PhysRevE.76.036106},
+  groups    = {Propagation CD},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
 @InProceedings{Rahman2009,
   author    = {Rahman, A and Ng, V.},
   title     = {Supervised Models for Coreference Resolution},
@@ -20828,6 +21010,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cbmi.2018.8516482},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@InProceedings{Ren2018a,
+  author    = {Ren, W. and Kang, D. and Tang, Y. and Chan, A. B.},
+  title     = {Fusing Crowd Density Maps and Visual Object Trackers for People Tracking in Crowd Scenes},
+  booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year      = {2018},
+  doi       = {10.1109/cvpr.2018.00561},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
 }
 
 @InCollection{Renoust2014,
@@ -21639,6 +21831,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.07.03},
 }
 
+@Article{Rosvall2008,
+  author    = {Rosvall, M. and Bergstrom, C. T.},
+  title     = {Maps of random walks on complex networks reveal community structure},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2008},
+  volume    = {105},
+  number    = {4},
+  pages     = {1118},
+  doi       = {10.1073/pnas.0706851105},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
 @Article{Roth1999,
   author    = {Roth, V.},
   title     = {Content-based retrieval from digital video},
@@ -22420,6 +22625,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=1599081.1599179},
 }
 
+@InProceedings{Schmitt2009,
+  author    = {Schmitt, D. T. and Kurkowski, S. H. and Mendenhall, M. J.},
+  title     = {Building Social Networks in Persistent Video Surveillance},
+  booktitle = {IEEE International Conference on Intelligence and Security Informatics},
+  year      = {2009},
+  doi       = {10.1109/isi.2009.5137307},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+}
+
 @Electronic{Schneider2016,
   author       = {Schneider, T. W.},
   month        = {09},
@@ -22602,6 +22817,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/iccv.2015.509},
   owner     = {Vincent},
   timestamp = {2020.01.03},
+}
+
+@Article{Seng2018,
+  author    = {Seng, K. P. and Ang, L.-M.},
+  title     = {Video Analytics for Customer Emotion and Satisfaction at Contact Centers},
+  journal   = {IEEE Transactions on Human-Machine Systems},
+  year      = {2018},
+  volume    = {48},
+  number    = {3},
+  pages     = {266-278},
+  doi       = {10.1109/thms.2017.2695613},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
 }
 
 @InProceedings{Sennrich2009,
@@ -24112,6 +24340,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.actaphys.uj.edu.pl/fulltext?series=Reg&vol=36&page=2537},
 }
 
+@Article{Taha2018,
+  author    = {Taha, K.},
+  title     = {Disjoint Community Detection in Networks Based on the Relative Association of Members},
+  journal   = {IEEE Transactions on Computational Social Systems},
+  year      = {2018},
+  volume    = {5},
+  number    = {2},
+  pages     = {493-507},
+  doi       = {10.1109/TCSS.2018.2822738},
+  owner     = {Vincent},
+  timestamp = {2018.05.10},
+}
+
 @InProceedings{Takayama2012,
   author    = {Takayama, K. and Johan, H. and Nishita, T.},
   title     = {Face Detection and Face Recognition of Cartoon Characters Using Feature Extraction},
@@ -24661,6 +24902,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.12},
   url       = {https://www.eerdmans.com/Products/7392/character-studies-in-the-fourth-gospel.aspx},
+}
+
+@Article{Tomasi2016,
+  author    = {Tomasi, M. and Pundlik, S. and Bowers, A. R. and Peli, E. and Luo, G.},
+  title     = {Mobile gaze tracking system for outdoor walking behavioral studies},
+  journal   = {Journal of Vision},
+  year      = {2016},
+  volume    = {16},
+  number    = {3},
+  pages     = {27},
+  doi       = {10.1167/16.3.27},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
 }
 
 @Book{Tompkins1961,
@@ -25710,6 +25964,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.12},
 }
 
+@Article{Vrigkas2017,
+  author    = {Vrigkas, M. and Nikou, C. and Kakadiaris, I. A.},
+  title     = {Identifying Human Behaviors Using Synchronized Audio-Visual Cues},
+  journal   = {IEEE Transactions on Affective Computing},
+  year      = {2017},
+  volume    = {8},
+  number    = {1},
+  pages     = {54-66},
+  doi       = {10.1109/taffc.2015.2507168},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+}
+
 @InProceedings{Vuillemot2009,
   author    = {Vuillemot, R. and Clement, T. and Plaisant, C. and Kumar, A.},
   title     = {What's being said near "Martha"? Exploring name entities in literary text collections},
@@ -25930,6 +26197,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/taffc.2015.2432791},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Article{Wang2017,
+  author    = {Wang, J. and Yuan, Y. and Yu, G.},
+  title     = {Face Attention Network: An Effective Face Detector for the Occluded Faces},
+  journal   = {arXiv},
+  year      = {2017},
+  volume    = {cs.CV},
+  pages     = {1711.07246},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+  url       = {https://arxiv.org/abs/1711.07246},
 }
 
 @Article{Ward1963,
@@ -26772,6 +27051,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.06.28},
 }
 
+@Article{Xiao2018,
+  author    = {Xiao, Y. and Li, X. and Wang, H. and Xu, M. and Liu, Y.},
+  title     = {3-HBP: A Three-Level Hidden Bayesian Link Prediction Model in Social Networks},
+  journal   = {IEEE Transactions on Computational Social Systems},
+  year      = {2018},
+  volume    = {5},
+  number    = {2},
+  pages     = {430-443},
+  doi       = {10.1109/tcss.2018.2812721},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+}
+
 @Article{XiweiTang2014,
   author    = {Tang, X. and Wang, J. and Zhong, J. and Pan, Y.},
   title     = {Predicting Essential Proteins Based on Weighted Degree Centrality},
@@ -27265,6 +27557,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {https://www.teachengineering.org/activities/view/uno_graphtheory_lesson01_activity2},
   owner        = {Vincent},
   timestamp    = {2019.08.18},
+}
+
+@Article{Yu2009,
+  author    = {Yu, C. and Zhong, Y. and Smith, T. and Park, I. and Huang, W.},
+  title     = {Visual Data Mining of Multimedia Data for Social and Behavioral Studies},
+  journal   = {Information Visualization},
+  year      = {2009},
+  volume    = {8},
+  number    = {1},
+  pages     = {56-70},
+  doi       = {10.1057/ivs.2008.32},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
 }
 
 @InProceedings{Yu2009a,
@@ -27817,6 +28122,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1140/epjb/e2009-00335-8},
   owner     = {Vincent},
   timestamp = {2016.09.27},
+}
+
+@Article{Zhou2015,
+  author    = {Zhou, E. and Cao, Z. and Yin, Q.},
+  title     = {Naive-Deep Face Recognition: Touching the Limit of LFW Benchmark or Not?},
+  journal   = {arXiv},
+  year      = {2015},
+  volume    = {cs.CV},
+  pages     = {1501.04690},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+  url       = {https://arxiv.org/abs/1501.04690},
 }
 
 @Article{Zhou2016,
