added ref Feild2020

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -311,6 +311,17 @@
   timestamp = {2019.03.23},
 }
 
+@PhdThesis{Agarwal2016,
+  author      = {Agarwal, A.},
+  title       = {Social Network Extraction from Text},
+  year        = {2016},
+  type        = {PhD Thesis},
+  doi         = {10.7916/D8571C9Z},
+  institution = {Columbia University},
+  owner       = {Vincent},
+  timestamp   = {2020.03.15},
+}
+
 @Article{Agerri2016,
   author    = {Agerri, R. and Rigau, G.},
   title     = {Robust multilingual Named Entity Recognition with shallow semi-supervised features},
@@ -2012,6 +2023,19 @@
   owner     = {Vincent},
   timestamp = {2019.03.30},
   url       = {https://gephi.org/publications/gephi-bastian-feb09.pdf},
+}
+
+@Article{Batagelj1998,
+  author    = {Batagelj, V. and Mrvar, A.},
+  title     = {Pajek - Program for large network analysis},
+  journal   = {Connections},
+  year      = {1998},
+  volume    = {21},
+  number    = {2},
+  pages     = {47-57},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+  url       = {http://vlado.fmf.uni-lj.si/pub/networks../doc/pajek.pdf},
 }
 
 @Article{Batagelj2000,
@@ -4509,6 +4533,17 @@
   url       = {https://www.historyireland.com/volume-22/brian-boru-book-armagh/},
 }
 
+@InProceedings{Castilho2016,
+  author    = {de Castilho, R. E. and Mújdricza-Maydt, É. and Yimam, S. M. and Hartmann, S. and Gurevych, I. and Frank, A. and Biemann, C.},
+  title     = {A Web-based Tool for the Integrated Annotation of Semantic and Syntactic Structures},
+  booktitle = {Workshop on Language Technology Resources and Tools for Digital Humanities},
+  year      = {2016},
+  pages     = {76–84},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+  url       = {https://www.aclweb.org/anthology/W16-4011/},
+}
+
 @Article{Cattrysse1992,
   author    = {Cattrysse, P.},
   title     = {Film (Adaptation) as Translation: Some Methodological Proposals},
@@ -6356,6 +6391,17 @@
   timestamp = {2019.04.02},
 }
 
+@InProceedings{Day2004,
+  author    = {Day, D. and McHenry, C. and Kozierok, R. and Riek, L.},
+  title     = {Callisto: A Configurable Annotation Workbench},
+  booktitle = {4th International Conference on Language Resources and Evaluation},
+  year      = {2004},
+  pages     = {2073-2076},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+  url       = {https://www.aclweb.org/anthology/L04-1381/},
+}
+
 @Article{DeCastro1999,
   author    = {De Castro, R. and Grossman, J. W.},
   title     = {Famous trails to Paul Erdős},
@@ -8117,6 +8163,16 @@
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://www.tandfonline.com/doi/abs/10.1080/00049539208260145},
+}
+
+@InProceedings{Feild2020,
+  author    = {Feild, H. and Amello, T. and Lombardo, P.},
+  title     = {EntiTies: An Interface for Annotating Ties between Entities in Text},
+  booktitle = {5th ACM SIGIR Conference on Human Information Interaction and Retrieval},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2020.02.24},
+  url       = {https://hank.feild.org/publications/chiir2020.pdf},
 }
 
 @InProceedings{Fekete2000,
@@ -12552,6 +12608,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@InProceedings{Kadry2017,
+  author    = {Kadry, A. and Dietz, L.},
+  title     = {Open Relation Extraction for Support Passage Retrieval},
+  booktitle = {40th International ACM-SIGIR Conference on Research and Development in Information Retrieval},
+  year      = {2017},
+  pages     = {1149–1152},
+  doi       = {10.1145/3077136.3080744},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+}
+
 @Book{Kadushin2012,
   title     = {Understanding Social Networks: Theories, Concepts, and Findings},
   publisher = {Oxford University Press},
@@ -13498,6 +13565,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2012.07.25},
 }
 
+@Article{Krause2014,
+  author    = {Krause, T. and Zeldes, A.},
+  title     = {ANNIS3: A new architecture for generic corpus query and visualization},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2014},
+  volume    = {31},
+  number    = {1},
+  pages     = {118-139},
+  doi       = {10.1093/llc/fqu057},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+}
+
 @InProceedings{Krauss2008,
   author    = {Krauss, J. and Nann, S. and Simon, D. and Fischbach, K. and Gloor, P.},
   title     = {Predicting Movie Success and Academy Awards through Sentiment and Social Network Analysis},
@@ -13880,6 +13960,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2014.09.09},
   url       = {http://lipn.univ-paris13.fr/marami/MARAMI/pub2014.html},
+}
+
+@Article{Labatut2019,
+  author    = {Labatut, V. and Bost, X.},
+  title     = {Extraction and Analysis of Fictional Character Networks: A Survey},
+  journal   = {ACM Computing Surveys},
+  year      = {2019},
+  volume    = {52},
+  number    = {5},
+  pages     = {89},
+  doi       = {10.1145/3344548},
+  owner     = {Vincent},
+  timestamp = {2019.06.09},
 }
 
 @Article{Lacan1977,
@@ -17966,6 +18059,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.12},
 }
 
+@InProceedings{Mueller2006,
+  author    = {Müller, C. and Strube, M.},
+  title     = {Multi-level annotation of linguistic data with MMAX2},
+  booktitle = {Corpus technology and language pedagogy: New resources new tools, new methods},
+  year      = {2006},
+  pages     = {197-214},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+  url       = {https://pdfs.semanticscholar.org/c35a/9a4073c5ef9ba99a38ff3540b8a4daf7f5f2.pdf},
+}
+
 @InProceedings{Muhuri2016,
   author    = {Muhuri, S. and Chakraborty, S. and Setua, S. K.},
   title     = {An Edge Contribution-Based Approach to Identify Influential Nodes from Online Social Networks},
@@ -19049,6 +19153,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://books.google.fr/books/about/Ireland_and_Scandinavia_in_the_Early_Vik.html?id=ncVmAAAAMAAJ},
+}
+
+@InProceedings{ODonnell2008,
+  author    = {O'Donnell, M.},
+  title     = {Demonstration of the UAM CorpusTool for text and image annotation},
+  booktitle = {46th Annual Meeting of the Association for Computational Linguistics on Human Language Technologies: Demo Session},
+  year      = {2008},
+  pages     = {13-16},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+  url       = {https://dl.acm.org/doi/10.5555/1564144.1564148},
 }
 
 @Book{ODonoghue2004,
@@ -20991,6 +21106,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@InProceedings{Reiter2018,
+  author    = {Reiter, N.},
+  title     = {CorefAnnotator - A New Annotation Tool for Entity References},
+  booktitle = {EADH Data in the Digital Humanities},
+  year      = {2018},
+  doi       = {10.18419/opus-10144},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
+}
+
 @PhdThesis{Reling1994,
   author    = {Reling, H. O.},
   title     = {The composition of tripolar pronouncement stories in the Gospel of Mark},
@@ -22670,6 +22795,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.2307/3263417},
   owner     = {Vincent},
   timestamp = {2019.06.24},
+}
+
+@InProceedings{Schuhmacher2016,
+  author    = {Schuhmacher, M. and Roth, B. and Paolo, S. Ponzetto and Dietz, L.},
+  title     = {Finding Relevant Relations in Relevant Documents},
+  booktitle = {European Conference on Information Retrieval},
+  year      = {2016},
+  volume    = {9626},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {654-660},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-319-30671-1_49},
+  owner     = {Vincent},
+  timestamp = {2020.03.15},
 }
 
 @Article{Schweinberger2011,
